nginx-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-webserver
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-webserver
  template:
    metadata:
      labels:
        app: nginx-webserver
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    app: nginx-webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
