nginx-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute-tls
spec:
  entryPoints:
    - websecure
  
  routes:
  - match: Host(`dev.huzaifairfan.com`) || PathPrefix(`/`)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
  
  tls:
    certResolver: le  # Typically 'le' or 'letsencrypt' if using default Traefik config
    domains:
      - main: dev.huzaifairfan.com
